This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Potential refleak in type_new when setting __new__ fails
Type: resource usage Stage: resolved
Components: Interpreter Core Versions: Python 3.6, Python 3.5, Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: serhiy.storchaka Nosy List: python-dev, serhiy.storchaka, xiang.zhang
Priority: normal Keywords: patch

Created on 2016-06-05 05:09 by xiang.zhang, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
refleak_in_type_new.patch xiang.zhang, 2016-06-05 05:09 review
Messages (3)
msg267382 - (view) Author: Xiang Zhang (xiang.zhang) * (Python committer) Date: 2016-06-05 05:09
As the title, there seems to be a potential refleak in type_new when setting __new__ fails.
msg267399 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2016-06-05 07:43
LGTM.
msg267401 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2016-06-05 08:07
New changeset 33b53734805b by Serhiy Storchaka in branch '3.5':
Issue #27225: Fixed a reference leak in type_new when setting __new__ fails.
https://hg.python.org/cpython/rev/33b53734805b

New changeset 31ad7885e2e5 by Serhiy Storchaka in branch 'default':
Issue #27225: Fixed a reference leak in type_new when setting __new__ fails.
https://hg.python.org/cpython/rev/31ad7885e2e5

New changeset db24d51c69d3 by Serhiy Storchaka in branch '2.7':
Issue #27225: Fixed a reference leak in type_new when setting __new__ fails.
https://hg.python.org/cpython/rev/db24d51c69d3
History
Date User Action Args
2022-04-11 14:58:32adminsetgithub: 71412
2016-06-05 08:07:41serhiy.storchakasetstatus: open -> closed
resolution: fixed
stage: commit review -> resolved
2016-06-05 08:07:13python-devsetnosy: + python-dev
messages: + msg267401
2016-06-05 07:43:38serhiy.storchakasetassignee: serhiy.storchaka
type: resource usage
components: + Interpreter Core
versions: + Python 2.7, Python 3.5
nosy: + serhiy.storchaka

messages: + msg267399
stage: commit review
2016-06-05 05:09:44xiang.zhangcreate