Issue #27225: Fixed a reference leak in type_new when setting __new__ fails. Patch by Xiang Zhang.